--- a/common/pom.xml
+++ b/common/pom.xml
@@ -10,21 +10,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>client</artifactId>
-    <name>client</name>
-
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <junit.version>5.8.2</junit.version>
-    </properties>
-
-    <dependencies>
-        <dependency>
-            <groupId>utc.pokerut</groupId>
-            <artifactId>common</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-    </dependencies>
+    <artifactId>common</artifactId>
+    <name>common</name>
 
     <build>
         <plugins>
@@ -46,7 +33,7 @@
                         <!-- Default configuration for running with: mvn clean javafx:run -->
                         <id>default-cli</id>
                         <configuration>
-                            <mainClass>utc.pokerut.client/utc.pokerut.client.HelloApplication</mainClass>
+                            <mainClass>utc.pokerut.common/utc.pokerut.common.main</mainClass>
                             <launcher>app</launcher>
                             <jlinkZipName>app</jlinkZipName>
                             <jlinkImageName>app</jlinkImageName>
