--- a/client/pom.xml
+++ b/client/pom.xml
@@ -19,11 +19,18 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>utc.pokerut</groupId>
             <artifactId>common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.kordamp.bootstrapfx</groupId>
+            <artifactId>bootstrapfx-core</artifactId>
+            <version>0.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
