--- a/.gitignore
+++ b/.gitignore
@@ -604,3 +604,5 @@ FodyWeavers.xsd
 # Additional files built by Visual Studio
 
 # End of https://www.toptal.com/developers/gitignore/api/java,visualstudio,visualstudiocode,intellij+all,eclipse,netbeans
+
+/profiles/*
